--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -15,11 +12,8 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+test/
+vendor/
+.idea/
 
-# Go workspace file
-go.work
-go.work.sum
-
-# env file
-.env
+config.yaml
